<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    android:elevation="@dimen/_5sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/corner_radius"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:background="@drawable/radius_background"
            android:backgroundTint="@color/shabdam_grey">

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_23sdp"
                android:src="@drawable/question_mark_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/kaise_khele"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_25sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@drawable/cancel_icon" />

        </RelativeLayout>

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/find_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="@dimen/_200sdp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:text="@string/paheli_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/box_radius"
                android:backgroundTint="@color/dark_grey">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/a_text"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@string/shabd_text"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/box_radius"
                android:backgroundTint="@color/yellow">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/bha_text"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@string/shabd_text1"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginLeft="@dimen/_15sdp"
                android:background="@drawable/box_radius"
                android:backgroundTint="@color/red">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/l_text"
                    android:textColor="@color/text_color_black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="@dimen/_15sdp"
                android:text="@string/shabd_text2"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>