<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.ShabdamActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/radius_background"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/iv_back_btn"
            android:text="@string/leaderboard_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/iv_share_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/share_icon"
            android:visibility="gone" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/radius_background"
        android:elevation="@dimen/_10sdp"
        android:orientation="horizontal"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_toRightOf="@id/iv_back_btn"
            android:text="@string/shabdam_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_20sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_question_mark_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/question_mark_icon" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_settings_btn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:src="@drawable/settings_icon" />

            <ImageView
                android:id="@+id/iv_statistics_btn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_toLeftOf="@id/iv_settings_btn"
                android:src="@drawable/statistics_icon" />

            <ImageView
                android:id="@+id/iv_trophy_btn"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_toLeftOf="@id/iv_statistics_btn"
                android:src="@drawable/trophy_icon" />
        </RelativeLayout>

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/koi_baat_nahi_text"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/_13sdp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_7sdp"
        android:text="@string/agli_baar_text"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_52sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/sahi_jabab_text"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/_13sdp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginLeft="@dimen/_52sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:orientation="horizontal"
        android:weightSum="3">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/box_radius"
            android:backgroundTint="#6BAA64">

            <TextView
                android:id="@+id/tv_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/right_answer"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/box_radius"
            android:backgroundTint="#6BAA64">

            <TextView
                android:id="@+id/tv_two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/right_answer1"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_4sdp"
            android:layout_marginRight="@dimen/_2sdp"
            android:layout_weight="1"
            android:background="@drawable/box_radius"
            android:backgroundTint="#6BAA64">

            <TextView
                android:id="@+id/tv_three"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/right_answer2"
                android:textColor="@color/white"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />
        </RelativeLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_30sdp"
        android:background="@drawable/leaderboard_background_radius">

        <RelativeLayout
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/box_radius"
            android:backgroundTint="@color/text_color_black">

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_agla_shabd_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_47sdp"
            android:background="@drawable/box_radius"
            android:backgroundTint="@color/yellow">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:text="@string/agla_shabd_text"
                android:textColor="@color/text_color_black"
                android:textSize="@dimen/_13sdp" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_10sdp"
                android:src="@drawable/forward_arrow_icon" />
        </RelativeLayout>

    </RelativeLayout>

</LinearLayout>